@@ -14,9 +14,11 @@
 * v0.6.0 Fighting Spam 💌 :latest:
 ** Added ➕
 ** Changed 🙅
+- Image action is now a default action (although default actions are going away.)
 - ⚠️ Propertize action now warns on unquoted lists.  Please use quoted lists.  In my opinion, all lists should be considered quoted in org, but this change is consistent with babel parameters being evaluated when unquoted.
 - Yet more manual Kaizen.  Seriously, check it out by installing dslide.
 ** Fixed 💩
+- The image action will no longer haphazardly try to display links that don't look like an image.  Remote images, if they were working on your Emacs, may be affected.  File an issue, explain your setup, and workaround by downloading.
 * v0.5.6 Let There Be News 🗞️
 - ⛔ The concept of default actions has been marked for deprecation.  This is preparation for instantiating actions on-demand rather than per slide.  The action system may undergo some overhaul internally.
   + Markup will be reduced, not changed
